--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "handlebars",
+  "name": "new_folder",
   "version": "1.0.0",
   "description": "Login Application",
   "main": "app.js",
